# NilsModLauncher

./: .gitignore  LICENSE  NilsModLauncher.bat  README.md  Start-NilsMod.bat  build.gradle  build.ps1  gradle.properties  index.html  package-lock.json  package.json  run.ps1  settings.gradle  vite.config.ts
.github/workflows/: build.yml
manifest/: nilsmod-manifest.example.json
releases/1.0.6/: nilsmod-manifest.json
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: installer.rs  launch.rs  main.rs  manifest.rs  minecraft.rs
src/main/java/de/nilsmod/launcher/: Main.java
src/main/java/de/nilsmod/launcher/download/: Downloader.java
src/main/java/de/nilsmod/launcher/hash/: HashVerifier.java
src/main/java/de/nilsmod/launcher/install/: FabricInstaller.java  InstallOptions.java  InstallerService.java  LegacyInstaller.java
src/main/java/de/nilsmod/launcher/manifest/: ManifestClient.java  ManifestModel.java  VersionEntry.java
src/main/java/de/nilsmod/launcher/minecraft/: FabricVersionJsonWriter.java  LauncherProfileManager.java  MinecraftDirectory.java
src/main/java/de/nilsmod/launcher/ui/: LauncherFrame.java
src/main/java/de/nilsmod/launcher/util/: JsonUtil.java  Log.java
src/main/java/net/nilsserver/launcher/: NilsModLauncher.java
src/main/resources/: application.properties
