[package]
name = "nilsmod-launcher"
version = "1.0.1"
description = "Cross-platform NilsMod launcher"
authors = ["NilsMod"]
edition = "2021"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
dirs = "6"
hex = "0.4"
open = "5"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
urlencoding = "2"
