[package]
name = "nilsmod-launcher"
version = "1.0.4"
description = "Cross-platform NilsMod launcher"
authors = ["NilsMod"]
edition = "2021"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
dirs = "6"
flate2 = "1"
hex = "0.4"
open = "5"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
tar = "0.4"
tauri = { version = "2", features = [] }
urlencoding = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
